Check source language to determine if page can be manually translated.

Bug: 907134, 902803
Change-Id: Ifb63346572e90a191918bcfe30d24f4362c10b45
Reviewed-on: https://chromium-review.googlesource.com/c/1344256
Reviewed-by: anthonyvd <anthonyvd@chromium.org>
Commit-Queue: anthonyvd <anthonyvd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609789}
Former-commit-id: 622c02f9a7e9fe8d55bab94de43b3dab30b8b9b8